--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,30 +1,38 @@
 version: '3'
 services:
-  eureka-server:
-    image: your-eureka-server-image:latest
+  Eureka:
+    container_name: eureka
+    build: Eureka
+    hostname: serviceregistry
     ports:
       - "8761:8761"
-    networks:
-      - microservices-network
+    image: "eureka"
 
-  microservice1:
-    image: your-microservice1-image:latest
-    ports:
-      - "8081:8080"
-    networks:
-      - microservices-network
     environment:
-      - EUREKA_SERVER_URL=http://eureka-server:8761/eureka
+      - eureka.client.serviceUrl.defaultZone=http://serviceregistry:8761/eureka/
 
-  microservice2:
-    image: your-microservice2-image:latest
-    ports:
-      - "8082:8080"
-    networks:
-      - microservices-network
-    environment:
-      - EUREKA_SERVER_URL=http://eureka-server:8761/eureka
 
-networks:
-  microservices-network:
+    Gateway:
+      container_name: gateway
+      build: API_Gateway_Server
+      hostname: gateway
+      ports:
+        - "8090:8090"
+      image: "gateway"
+      depends_on:
+        - Eureka
+        - db-mysql
+
+      environment:
+        - eureka.client.serviceUrl.defaultZone=http://serviceregistry:8761/eureka/
+
+    db-mysql:
+      image: "mysql:5.6"
+      container_name: db-mysql
+      environment:
+        - MYSQL_ROOT_PASSWORD=root
+      ports:
+        - "3307:3307"
+      restart: unless-stopped
+
 
