update app.properties apiGateway

--- a/API_Gateway_Server/src/main/resources/application.properties
+++ b/API_Gateway_Server/src/main/resources/application.properties
@@ -8,7 +8,7 @@ eureka.client.register-with-eureka=true
 spring.cloud.gateway.discovery.locator.enabled=true
 
 spring.cloud.gateway.routes[0].id=Object
-spring.cloud.gateway.routes[0].uri=http://Object:8082
+spring.cloud.gateway.routes[0].uri=lb://Object
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/objects/**
 
 spring.cloud.gateway.routes[1].id=ORGANIZATION-MS
