added feign communication with object ms and event ms

--- a/API_Gateway_Server/src/main/resources/application.properties
+++ b/API_Gateway_Server/src/main/resources/application.properties
@@ -8,7 +8,7 @@ eureka.client.register-with-eureka=true
 spring.cloud.gateway.discovery.locator.enabled=true
 
 spring.cloud.gateway.routes[0].id=Object
-spring.cloud.gateway.routes[0].uri=http://Object:8082
+spring.cloud.gateway.routes[0].uri=lb://Object:8082
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/objects/**
 
 spring.cloud.gateway.routes[1].id=ORGANIZATION-MS
@@ -24,5 +24,5 @@ spring.cloud.gateway.routes[3].uri=http://localhost:8084
 spring.cloud.gateway.routes[3].predicates[0]=Path=/claims/**
 
 spring.cloud.gateway.routes[4].id=AppEvents
-spring.cloud.gateway.routes[4].uri=http://localhost:8040
-spring.cloud.gateway.routes[4].predicates=Path=/eventsApi/**
+spring.cloud.gateway.routes[4].uri=lb://APPEVENTS:8040
+spring.cloud.gateway.routes[4].predicates=Path=/events/**
