--- a/OrganizationMS/src/main/resources/application.properties
+++ b/OrganizationMS/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.cloud.config.import-check.enabled=false
 spring.cloud.config.fail-fast=true
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3307/organization-db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/organization-db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
