--- a/frontAngular/package.json
+++ b/frontAngular/package.json
@@ -64,6 +64,8 @@
     "jquery": "3.6.0",
     "json": "^11.0.0",
     "jspdf": "^2.5.1",
+    "keycloak-angular": "^8.4.0",
+    "keycloak-js": "^13.0.1",
     "moment": "^2.29.4",
     "ng2-countdown-timer": "^1.2.2",
     "ngx-bootstrap": "^8.0.0",
