--- a/API_Gateway_Server/src/main/resources/application.properties
+++ b/API_Gateway_Server/src/main/resources/application.properties
@@ -5,12 +5,12 @@ server.port=8090
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 
-spring.cloud.gateway.globalcors.corsConfigurations['[/**]'].allowedOrigins=*
-spring.cloud.gateway.globalcors.corsConfigurations['[/**]'].allowedMethods=*
-spring.cloud.gateway.globalcors.corsConfigurations['[/**]'].allowedHeaders=*
+#spring.cloud.gateway.globalcors.corsConfigurations['[/**]'].allowedOrigins=*
+#spring.cloud.gateway.globalcors.corsConfigurations['[/**]'].allowedMethods=*
+#spring.cloud.gateway.globalcors.corsConfigurations['[/**]'].allowedHeaders=*
 
-
-spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,OPTIONS
 
 spring.cloud.gateway.routes[0].id=Object
 spring.cloud.gateway.routes[0].uri=lb://Object:8082
