--- a/API_Gateway_Server/src/main/resources/application.properties
+++ b/API_Gateway_Server/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.cloud.gateway.routes[2].uri=lb://BLOGS-S
 spring.cloud.gateway.routes[2].predicates[0]=Path=/blogs/**
 
 spring.cloud.gateway.routes[3].id=CLAIM-MS
-spring.cloud.gateway.routes[3].uri=http://localhost:8084
+spring.cloud.gateway.routes[3].uri=lb://CLAIM-MS
 spring.cloud.gateway.routes[3].predicates[0]=Path=/claims/**
 
 spring.cloud.gateway.routes[4].id=AppEvents
